force-app/main/default/objects/Medication__c/fields/Dosage_Form__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Form__c</fullName>
    <label>Dosage Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>