force-app/main/default/objects/Medication__c/fields/RxCUI__c.field-meta.xml
<CustomField>
    <fullName>RxCUI__c</fullName>
    <externalId>true</externalId>
    <label>RxCUI</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>