force-app/main/default/objects/Medication__c/fields/RxNorm_Code__c.field-meta.xml
<CustomField>
    <fullName>RxNorm_Code__c</fullName>
    <label>RxNorm Code</label>
    <externalId>true</externalId>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>